--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -30,7 +30,7 @@
 }
 
 .heading {
-  font-size: 16px;
+  font-size: 13px;
   font-weight: 500;
   color: #111;
   margin: 0;
